--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Calculator</title>
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="/css/style.css" type="text/css" />
   </head>
   <body>
     <div class="main-wrapper">
@@ -34,15 +34,15 @@
         <button type="button" class="btn" id="btn">4</button>
         <button type="button" class="btn diff" id="btn">+</button>
         <button type="button" class="btn" id="btn">3</button>
-        <button type="button" class="btn" id="btn">2</button>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   
+        <button type="button" class="btn" id="btn">2</button>
         <button type="button" class="btn" id="btn">1</button>
         <button type="button" class="btn diff" id="btn">-</button>
-        <button type="button" class="btn diff" id="btn">*</button>                                                                                                                                                                                                                                                                                                                                                                                                                                      
-        <button type="button" class="btn" id="btn">0</button>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           
-        <button type="button" class="btn" id="btn">.</button>                                                                                                        
-        <button type="button" class="btn" id="btn">=</button>                                                                                                                                                                                                                                                                                                                                                                                                                                                                    
+        <button type="button" class="btn diff" id="btn">*</button>
+        <button type="button" class="btn" id="btn">0</button>
+        <button type="button" class="btn" id="btn">.</button>
+        <button type="button" class="btn" id="btn">=</button>
       </div>
     </div>
-    <script src="js/index.js"></script>
+    <script src="js/index.js" type="text/javascript"></script>
   </body>
 </html>
