Some changes on 30/4/23

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/style.css" type="text/css" />
   </head>
   <body>
+    <button id="mode"></button>
     <div class="main-wrapper">
       <div class="input-wrapper">
         <textarea class="store-pre-result" readonly></textarea>
@@ -22,22 +23,22 @@
       </div>
       <div class="buttons-wrapper">
         <button type="button" class="btn diff" id="btn">%</button>
-        <button type="button" class="btn diff" id="btn">C</button>
         <button type="button" class="btn diff" id="btn">AC</button>
         <button type="button" class="btn diff" id="btn">X</button>
-        <button type="button" class="btn" id="btn">9</button>
-        <button type="button" class="btn" id="btn">8</button>
-        <button type="button" class="btn" id="btn">7</button>
         <button type="button" class="btn diff" id="btn">/</button>
-        <button type="button" class="btn" id="btn">6</button>
-        <button type="button" class="btn" id="btn">5</button>
-        <button type="button" class="btn" id="btn">4</button>
-        <button type="button" class="btn diff" id="btn">+</button>
-        <button type="button" class="btn" id="btn">3</button>
-        <button type="button" class="btn" id="btn">2</button>
-        <button type="button" class="btn" id="btn">1</button>
-        <button type="button" class="btn diff" id="btn">-</button>
+        <button type="button" class="btn" id="btn">7</button>
+        <button type="button" class="btn" id="btn">8</button>
+        <button type="button" class="btn" id="btn">9</button>
         <button type="button" class="btn diff" id="btn">*</button>
+        <button type="button" class="btn" id="btn">4</button>
+        <button type="button" class="btn" id="btn">5</button>
+        <button type="button" class="btn" id="btn">6</button>
+        <button type="button" class="btn diff" id="btn">-</button>
+        <button type="button" class="btn" id="btn">1</button>
+        <button type="button" class="btn" id="btn">2</button>
+        <button type="button" class="btn" id="btn">3</button>
+        <button type="button" class="btn diff" id="btn">+</button>
+        <button type="button" class="btn diff" id="btn">C</button>
         <button type="button" class="btn" id="btn">0</button>
         <button type="button" class="btn" id="btn">.</button>
         <button type="button" class="btn" id="btn">=</button>
